# subrepo

./: .gitignore  CHANGELOG.md  CLAUDE.md  COVERAGE_PLAN.md  COVERAGE_PROGRESS.md  README.md  TEST_FIXES_SUMMARY.md  main.py  pyproject.toml
.github/workflows/: pr-checks.yml
.specify/memory/: constitution.md
specs/001-git-subtree-repo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-git-subtree-repo/checklists/: requirements.md
specs/001-git-subtree-repo/contracts/: cli-interface.md
specs/002-push-feature-branches/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-push-feature-branches/checklists/: requirements.md
specs/002-push-feature-branches/contracts/: cli-push.md
specs/003-manifest-copyfile-linkfile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-manifest-copyfile-linkfile/checklists/: requirements.md
specs/003-manifest-copyfile-linkfile/contracts/: cli-file-operations.md
subrepo/: __init__.py  __main__.py  cli.py  exceptions.py  file_operations.py  git_commands.py  manifest_parser.py  models.py  subtree_manager.py  workspace.py
tests/: __init__.py  conftest.py
tests/contract/: test_cli_init.py  test_cli_pull.py  test_cli_push.py  test_cli_push_contract.py  test_cli_status.py  test_cli_sync.py
tests/integration/: test_backward_compatibility.py  test_manifest_workflow.py  test_push_default_branch.py  test_push_feature_branch.py  test_push_operations.py  test_subtree_operations.py
tests/integration/fixtures/: complex_manifest.xml  invalid_manifest.xml  simple_manifest.xml
tests/unit/: test_branch_info_creation.py  test_cli.py  test_default_branch_compatibility.py  test_exceptions.py  test_file_operations.py  test_git_branch_detection.py  test_git_commands.py  test_git_push_execution.py  test_manifest_integration.py  test_manifest_parser.py  test_manifest_utils.py  test_models.py  test_subtree_manager.py  test_target_branch_logic.py  test_workspace.py
